homelab/apps/media/base/jellyfin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: jellyfin
        image: lscr.io/linuxserver/jellyfin:10.9.11
        ports:
        - containerPort: 8096
        volumeMounts:
        - mountPath: /config
          name: config
        - mountPath: /data
          name: data
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: jellyfin-config
      - name: data
        persistentVolumeClaim:
          claimName: medias
